CertCKAD/exam-gpt/exam2/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test-client
  name: test-client
  namespace: exam2
spec:
  containers:
  - image: busybox
    name: test-client
    command: ['/sh', '-c', 'sleep 3600']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
