CertCKAD/exam-gpt/exam2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: exam2
spec:
  rules:
  - host: host
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 80
        path: /ckad
        pathType: Prefix
status:
  loadBalancer: {}
